[UIBundle] Create patient inspector link is now white.

--- a/src/Bundle/UIBundle/Resources/assets/less/components/inspector.less
+++ b/src/Bundle/UIBundle/Resources/assets/less/components/inspector.less
@@ -37,6 +37,15 @@
           font-size: @font-size-base;
         }
       }
+
+      a {
+        color: rgba(255, 255, 255, 0.9);
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: rgba(255, 255, 255, 1);
+      }
     }
 
     .inspector-body {
