[UIBundle] All details grid prototype filters have a clear action.

--- a/src/Bundle/UIBundle/Resources/views/Frontend/Patient/regimens.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/Patient/regimens.html.twig
@@ -26,6 +26,9 @@
             </label>
           {% endfor %}
           </div>
+          <div class="btn-group">
+            <button type="button" name="clear-prototype" data-accard="clear-prototypes" class="btn">Clear</button>
+          </div>
         </th>
       </tr>
     </tbody>
