--- a/src/Bundle/UIBundle/Resources/views/Frontend/Patient/attributes.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/Patient/attributes.html.twig
@@ -23,6 +23,9 @@
             </label>
           {% endfor %}
           </div>
+          <div class="btn-group">
+            <button type="button" name="clear-prototype" data-accard="clear-prototypes" class="btn">Clear</button>
+          </div>
         </th>
       </tr>
     </tbody>
